# client-python

./: .gitignore  Makefile  README.md  pyproject.toml
pezzo/client/: __init__.py  classes.py  client.py
pezzo/config/: __init__.py  config.py
pezzo/openai/: __init__.py  openai.py
pezzo/scripts/: prebuild.py
pezzo/utils/: helpers.py  interpolate_variables.py
